[package]
name = "coretime-revenue-test"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.2"
log = "0.4.20"
subxt = { version = "0.37", features = ["substrate-compat"] }
subxt-signer = { version = "0.37" }
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
anyhow = "1.0.81"
zombienet-sdk = "0.2.6"
# zombienet-sdk = { git = "https://github.com/paritytech/zombienet-sdk", branch = "main" }
# zombienet-sdk = { path = "../zombienet-sdk/crates/sdk" }
serde = "1.0.197"
serde_json = "1.0.114"
# futures = "0.3.30"
parity-scale-codec = { version = "3.6.9", features = [ "derive" ] }

